gen/playcustomapp/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-playcustomapp1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/playcustomapp/v1/lib)
error[E0423]: expected value, found struct `custom_apps::CustomAppsActions`
   --> gen/playcustomapp/v1/lib/src/lib.rs:105:13
    |
105 |             custom_apps::CustomAppsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `custom_apps::CustomAppsActions { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-playcustomapp1`.

To learn more, run the command again with --verbose.
